fix(CSS): increase font size for table header and add padding for improved readability

--- a/css.css
+++ b/css.css
@@ -1869,7 +1869,7 @@ body.timeline-page a:focus-visible {
 /* Fit row text styling */
 .fit th {
     color: var(--color_darkgray) !important;
-    font-size: 0.8rem !important;
+    font-size: 0.9rem !important;
     font-family: var(--age-matrix-th-font);
 }
 
@@ -1878,6 +1878,7 @@ body.timeline-page a:focus-visible {
     font-size: 1rem !important;
     font-family: var(--age-matrix-td-font);
     line-height: 1.7rem;
+    padding: 2px 10px 2px 10px;
 }
 
 /* Registration: center all age-matrix columns except the first */
